overflow fixed

--- a/styles/components/header.module.scss
+++ b/styles/components/header.module.scss
@@ -8,13 +8,14 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  overflow: hidden;
 
   & .blurrybg{
     position: absolute;
     top: 0;
     left:0;
-    height: 40rem;
-    width:0%;
+    height: 50rem;
+    width:40%;
     top: 30%;
     left: 50%;
     transform: translate(-50%, 0%);
@@ -41,7 +42,7 @@
   & .blurrybg1{
     position: absolute;
     height: 40rem;
-    width:0%;
+    width:50%;
     top: -10%;
     left: 70%;
     transform: translate(-50%, 0%);
